classDiagram
    class Dish {
        string Id
        string Name
        string Description
        string? HealthFactor
        string? Photo
        string? Restaurant
    }

    class DishManager {
        +List~Dish~ GetAllDishesAsync()
        +Dish? GetDishByIdAsync(string id)
        +void AddDishAsync(Dish dish)
        +void UpdateDishAsync(Dish dish)
        +void DeleteDishAsync(string id)
    }

    class DishRepository {
        +List~Dish~ GetAllDishesAsync()
        +Dish? GetDishByIdAsync(string id)
        +void AddDishAsync(Dish dish)
        +void UpdateDishAsync(Dish dish)
        +void DeleteDishAsync(string id)
    }

    DishManager --> DishRepository
    DishRepository --> Dish
